apps/kuard/05-kuard-httproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kuard-httpproxy
  namespace: kuard
spec:
  virtualhost:
    fqdn: kuard.foo.bar.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: kuard
          port: 80
